test2-2024-01-02.log
regress/test2.fir:247424:17: error: use of unknown declaration 'validif'
    tmp20070 <= validif(head(UInt<3>(6), 1), SInt<24>("b-11111101000010001010101"))
                ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 0.8749 seconds

  ----Wall Time----  ----Name----
    0.8727 ( 99.7%)  FIR Parser
    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    Parse OMIR
    0.8275 ( 94.6%)    Parse modules
    0.0022 (  0.3%)  Rest
    0.8749 (100.0%)  Total

{
  totalTime: 0.89,
  maxMemory: 167428096
}
